--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Keep the score of a ping pong game",
   "main": "index.html",
   "scripts": {
+    "deploy-gh-pages": "git-directory-deploy --directory build --branch gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "gulp dev"
   },
